app-with-db/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  annotations:
    app.quarkus.io/quarkus-version: 3.12.0
    app.quarkus.io/commit-id: e7824475768421a9cdb770b8cd66c49375e8445c
    app.quarkus.io/vcs-uri: https://github.com/fernandobalieiro/app-with-db.git
    app.quarkus.io/build-timestamp: 2024-09-20 - 16:22:18 +0000
  labels:
    app.kubernetes.io/name: app-with-db
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/managed-by: quarkus
  name: app-with-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app-with-db
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/quarkus-version: 3.12.0
        app.quarkus.io/commit-id: e7824475768421a9cdb770b8cd66c49375e8445c
        app.quarkus.io/vcs-uri: https://github.com/fernandobalieiro/app-with-db.git
        app.quarkus.io/build-timestamp: 2024-09-20 - 16:22:18 +0000
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/name: app-with-db
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: app-with-db:0.0.1
          imagePullPolicy: Never
          name: app-with-db
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
