app-with-db/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dev
  annotations:
    app.quarkus.io/quarkus-version: 3.12.0
    app.quarkus.io/commit-id: e7824475768421a9cdb770b8cd66c49375e8445c
    app.quarkus.io/vcs-uri: https://github.com/fernandobalieiro/app-with-db.git
    app.quarkus.io/build-timestamp: 2024-09-20 - 16:22:18 +0000
  labels:
    app.kubernetes.io/name: app-with-db
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/managed-by: quarkus
  name: app-with-db-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: hello-world.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-with-db
                port:
                  number: 8080
